<resources>
    <string name="app_name">ApatorMapbox</string>
    <string name="mapbox_access_token">
        pk.eyJ1IjoiYXBhdG9ybWFwYm94IiwiYSI6ImNqeTQ5OXlsZjE0anIzY21xb3Nsb2tubTgifQ.c4_iQgT_fg0-ZwhwMrKroQ
    </string>

    <string name="sync_preference">sync_preference</string>
    <string name="api_key_preference">api_key_preference</string>
    <string name="time_window_preference">time_window_preference</string>
    <string name="back_btn_PF">BACK</string>

    <string name="lat_textView_PF">Latitude:</string>
    <string name="Lon_textView_PF">Longitude:</string>
    <string name="elev_textView_PF">Elevation:</string>
    <string name="tz_textView_PF">Timezone:</string>
    <string name="location_textView_PF">Location:</string>
    <string name="City_textView_PF">City:</string>
    <string name="state_textView_PF">State:</string>
    <string name="SolarRF_textView_PF">Filename:</string>
    <string name="Distance_textView_PF">Distance:</string>
    <string name="value">value</string>

    <string name="synchronization">Synchronization</string>
    <string name="solar_api_key">Solar API key</string>
    <string name="time_window">Time Window</string>
    <!--Notification-->
    <string name="notifiaction_channel_id">EarthQuake</string>
    <string name="channel_description">Channel_Desc</string>
    <!--Toast-->
    <string name="no_internet_connection">No internet connection</string>
    <string name="localisation_permissions_are_necessary">Localisation permission are necessary</string>
    <string name="last_sync">Last synchronization</string>

    <string name="cancel_btn_CL">cancel</string>
    <string name="choice_textView_AD">Choose your solar</string>

    <string name="solar_api">0T4V4lMTxPT7b9JJexnz1vLsPzWXlX6XV8exWuud</string>

    <string name="api_key_error_message">Solar API key error</string>
    <string name="map_url">mapbox://styles/apatormapbox/cjyfsbbq207q91dqi32j6435u</string>
    <string name="location_disabled">Location is disabled</string>
</resources>
