<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.PaszportFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/constraintLayout">
            <TextView
                    android:text="@string/value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/distance_value_PF2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/solarRF_value_PF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"/>
            <TextView
                    android:text="@string/value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/solarRF_value_PF"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/state_value_PF2"/>
            <TextView
                    android:text="@string/value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/state_value_PF2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/city_value_PF"/>
            <TextView
                    android:text="@string/value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/city_value_PF"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/location_value_PF2"/>
            <TextView
                    android:text="@string/value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tz_value_PF"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/elev_value_PF"/>
            <TextView
                    android:text="@string/value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/location_value_PF2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/tz_value_PF"/>
            <TextView
                    android:text="@string/lat_textView_PF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lat_textView_PF"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="100dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"/>
            <TextView
                    android:text="@string/Lon_textView_PF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lon_textView_PF"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/lat_textView_PF"/>
            <TextView
                    android:text="@string/elev_textView_PF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/elev_textView_PF"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/lon_textView_PF"/>
            <TextView
                    android:text="@string/tz_textView_PF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tz_textView_PF"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/elev_textView_PF"/>
            <TextView
                    android:text="@string/location_textView_PF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/location_textView_PF"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/tz_textView_PF"/>
            <TextView
                    android:text="@string/City_textView_PF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/city_textView_PF"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/location_textView_PF"/>
            <TextView
                    android:text="@string/state_textView_PF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/state_textView_PF"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/city_textView_PF"/>
            <TextView
                    android:text="@string/SolarRF_textView_PF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/solarRF_textView_PF"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/state_textView_PF"/>
            <TextView
                    android:text="@string/Distance_textView_PF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/distance_textView_PF"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="100dp"
                    app:layout_constraintTop_toBottomOf="@+id/solarRF_textView_PF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"/>
            <TextView
                    android:text="@string/value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lat_value_PF"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    android:layout_marginStart="8dp"/>
            <TextView
                    android:text="@string/value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lon_value_PF"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/lat_value_PF"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    android:layout_marginStart="8dp"/>
            <TextView
                    android:text="@string/value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/elev_value_PF"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/lon_value_PF"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    android:layout_marginStart="8dp"/>
            <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:id="@+id/guideline"
                                                        app:layout_constraintGuide_begin="205dp"
                                                        android:orientation="vertical"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            android:id="@+id/poa_Layout"
            app:layout_constraintHorizontal_bias="0.0">
        <com.anychart.AnyChartView
                android:id="@+id/poa_monthly_ACV_PF"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/dc_Layout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/poa_Layout"
                android:layout_marginTop="8dp">
            <com.anychart.AnyChartView
                    android:id="@+id/dc_monthly_ACV_PF"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/ac_Layout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/dc_Layout"
                android:layout_marginTop="8dp">
            <com.anychart.AnyChartView
                    android:id="@+id/ac_monthly_ACV_PF"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/solrad_Layout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/ac_Layout">
            <com.anychart.AnyChartView
                    android:id="@+id/solrad_monthly_ACV_PF"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button
                android:text="@string/back_btn_PF"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/back_btn_PF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>